# wallpaper

./: .gitignore  AGENTS.md  CMakeLists.txt  LICENSE  README.md  findings.md  progress.md  task_plan.md
docs/superpowers/plans/: 2026-04-04-win11-mainline-implementation-plan.md
docs/superpowers/specs/: 2026-04-04-auto-fps-only-design.md  2026-04-04-exe-size-reduction-design.md  2026-04-04-low-cpu-playback-design.md  2026-04-04-remove-adaptive-quality-toggle-design.md  2026-04-04-win11-mainline-design.md  2026-04-05-decode-pipeline-split-design.md  2026-04-05-perf-refine-design.md
include/wallpaper/: app.h  async_file_writer.h  compiler_assume.h  config.h  config_store.h  cpp26_feature_support.h  cpu_frame_buffer_pool.h  cpu_frame_downscale.h  d3d11_interop_device.h  decode_async_read_policy.h  decode_output_policy.h  decode_output_subtype_policy.h  decode_token_gate_policy.h  desktop_attach_policy.h  desktop_context_policy.h  fixed_task_queue.h  foreground_policy.h  frame_bridge.h  frame_bridge_slot_policy.h  frame_buffer_policy.h  frame_latency_policy.h  gpu_nv12_srv_cache_policy.h  interfaces.h  long_run_load_policy.h  loop_sleep_policy.h  metrics_log_file.h  metrics_log_line.h  metrics_sampler.h  metrics_shard_retain_set.h  monitor_layout_policy.h  monitor_rect_cache.h  nearest_scale_stepper.h  nv12_layout_policy.h  pause_resource_policy.h  pause_suspend_policy.h  pause_transition_policy.h  playback_profile_policy.h  present_sample_window.h  probe_cadence_policy.h  process_name_cache.h  (+23 more)
resources/: app_icon.rc
scripts/: analyze_deadcode_perf.ps1  bench_perf.ps1  build_app.ps1  run_tests.ps1
src/: app.cpp  app_autostart.cpp  app_autostart.h  app_decode_control.cpp  app_metrics.cpp  app_tray.cpp  async_file_writer.cpp  config_store.cpp  cpu_frame_buffer_pool.cpp  cpu_frame_downscale.cpp  decode_async_read_policy.cpp  decode_output_policy.cpp  decode_output_subtype_policy.cpp  desktop_attach_policy.cpp  desktop_context_policy.cpp  foreground_policy.cpp  frame_bridge.cpp  frame_buffer_policy.cpp  frame_latency_policy.cpp  gpu_nv12_srv_cache_policy.cpp  long_run_load_policy.cpp  loop_sleep_policy.cpp  main.cpp  metrics_log_file.cpp  metrics_log_line.cpp  metrics_sampler.cpp  monitor_layout_policy.cpp  monitor_rect_cache.cpp  nv12_layout_policy.cpp  pause_resource_policy.cpp  pause_suspend_policy.cpp  pause_transition_policy.cpp  platform_stubs.cpp  probe_cadence_policy.cpp  quality_governor.cpp  render_scheduler.cpp  resource_arbiter.cpp  runtime_trim_policy.cpp  source_frame_rate_policy.cpp  startup_policy.cpp  (+10 more)
src/win/: decode_pipeline_core.cpp  decode_pipeline_internal.h  decode_pipeline_mf.cpp  decode_pipeline_stub.cpp  decode_pipeline_stub_impl.inc  tray_controller_win.cpp  wallpaper_host_win.cpp
tests/: async_file_writer_tests.cpp  config_store_tests.cpp  cpp26_feature_support_tests.cpp  cpu_frame_buffer_pool_tests.cpp  cpu_frame_downscale_tests.cpp  decode_async_read_policy_tests.cpp  decode_output_policy_tests.cpp  decode_output_subtype_policy_tests.cpp  desktop_attach_plan_tests.cpp  desktop_attach_policy_tests.cpp  desktop_context_policy_tests.cpp  fixed_task_queue_tests.cpp  foreground_policy_tests.cpp  frame_bridge_tests.cpp  frame_buffer_policy_tests.cpp  frame_latency_policy_tests.cpp  gpu_nv12_srv_cache_policy_tests.cpp  long_run_load_policy_tests.cpp  loop_sleep_policy_tests.cpp  metrics_log_file_tests.cpp  metrics_log_line_tests.cpp  metrics_sampler_tests.cpp  metrics_shard_retain_set_tests.cpp  monitor_layout_policy_tests.cpp  nearest_scale_stepper_tests.cpp  nv12_layout_policy_tests.cpp  pause_resource_policy_tests.cpp  pause_suspend_policy_tests.cpp  pause_transition_policy_tests.cpp  playback_profile_policy_tests.cpp  present_sample_window_tests.cpp  probe_cadence_policy_tests.cpp  process_name_cache_tests.cpp  quality_governor_tests.cpp  render_scheduler_tests.cpp  resource_arbiter_tests.cpp  runtime_trim_policy_tests.cpp  sample_publish_policy_tests.cpp  shared_device_cache_policy_tests.cpp  single_instance_policy_tests.cpp  (+18 more)
